--- a/index.html
+++ b/index.html
@@ -3,12 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Bookmark App</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=roskiecruz.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
+    <!-- Open modal -->
+    <h1 id="show-modal">Add Bookmark</h1>
+    <!-- Bookmarks -->
+    <div class="container" id="bookmarks-container">
+        <div class="item">
+            <i class="fas fa-times delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="https://www.google.com/s2/favicons?domain=roskiecruz.com" alt="Favicon">
+                <a href="https://roskiecruz.com" target="_blank">Roskie Cruz</a>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fas fa-times delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="https://www.google.com/s2/favicons?domain=roskiecruz.com" alt="Favicon">
+                <a href="https://roskiecruz.com" target="_blank">Roskie Cruz</a>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fas fa-times delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="https://www.google.com/s2/favicons?domain=roskiecruz.com" alt="Favicon">
+                <a href="https://roskiecruz.com" target="_blank">Roskie Cruz</a>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal-container show-modal" id="modal">
+        <div class="modal">
+            <i class="fas fa-times close-icon" id="close-modal"></i>
+            <div class="modal-header">
+                <h3>Add Bookmark</h3>
+            </div>
+            <div class="modal-content">
+                <form id="bookmark-form">
+                    <!-- Website name -->
+                    <div class="form-group">
+                        <label for="website-name" class="form-label">Website Name</label>
+                        <input type="text" class="form-input" id="website-name">
+                    </div>
+                    <!-- Website URL -->
+                    <div class="form-group">
+                        <label for="website-url" class="form-label">Website URL</label>
+                        <input type="text" class="form-input" id="website-url">
+                    </div>
+                    <button type="submit">Save</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <!-- Script -->
     <script src="public/js/script.js"></script>
 </body>
